# psynet-github

./: .gitignore  README.md  pyproject.toml
.github/workflows/: integration-deploy.yml
scripts/: setup_secrets.py
src/psynet_github/: __init__.py  cli.py  create.py
src/psynet_github/templates/: AGENTS.md  Dockerfile  Dockertag  README.md  __dot__gitignore  config.txt  deploy.txt  experiment.py  requirements.txt
src/psynet_github/templates/__dot__github/workflows/: deploy-hotair.yml  test.yml
tests/: test_create.py  test_integration_workflow.py  test_setup_secrets.py  test_update_scripts.py
