[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psynet-github"
version = "0.1.0"
description = "Create GitHub repositories containing starter PsyNet experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
psynet-github = "psynet_github.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psynet_github = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
